@@ -1,3 +1,8 @@
+2015-03-19  Christian Groessler  <chris@groessler.org>
+* dc/atari_dc.c: Don't inject a "START" button press when leaving the
+  on-screen keyboard.
+
+
 2015-03-17  Perry McFarlane  <perry_m@mail.com>
 * antic.c, artifact.c, colours.c, img_tape.c, log.[ch], monitor.c, screen.c,
   sio.c, ui.[ch], sdl/video.c, sdl/video_gl.c, sdl/video_sw.c, win32/sound.c:
